# voice-agent

./: .gitmodules  Cargo.toml  Makefile  README.md
scripts/: setup_env.sh
src/: downsampler.rs  lib.rs  llm.rs  main.rs  messages.rs  pause_detector.rs  pcm_capture.rs  pcm_playback.rs  stt_handle.rs  tts_handle.rs  voice_agent.rs
src/llm-test/: main.rs
src/local/: main.rs  pcm_capture.rs  pcm_playback.rs
src/ws/: main.rs  ws.js  ws.rs
