[package]
name = "voice-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
cpal = "0.16"
anyhow = "1"
crossbeam-channel = "0.5"
base64 = "0.22"
rust-gradium = { path = "external/rust-gradium" }
reqwest = { version = "0.12", features = ["json", "stream"] }
async-stream = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
actix = "0.13"
actix-web = "4.5"
actix-web-actors = "4.2"

[[bin]]
name = "voice-agent"
path = "src/main.rs"

[[bin]]
name = "voice-agent-ws"
path = "src/bin/ws.rs"
